Fix font sizing on mobile

--- a/blog/static/css/main.css
+++ b/blog/static/css/main.css
@@ -32,7 +32,7 @@ html {
 
 @media (max-width: 768px) {
   html {
-    font-size: 10pt;
+    font-size: 11pt;
   }
 }
 
@@ -219,10 +219,6 @@ blockquote em {
 
 iframe {
   width: 100%;
-}
-
-html {
-  font-size: 12pt;
 }
 
 a.seamless {
